--- a/spotify-clone-back/src/main/resources/application.yml
+++ b/spotify-clone-back/src/main/resources/application.yml
@@ -48,3 +48,9 @@ spring:
 
 server:
   port: 8085
+
+okta:
+  oauth2:
+    issuer: https://dev-8m3dl1oicnit3pp8.us.auth0.com/
+    client-id: ${auth0_client_id}
+    client-secret: ${auth0_client_secret}
