--- a/spotify-clone-front/package.json
+++ b/spotify-clone-front/package.json
@@ -24,7 +24,9 @@
     "@fortawesome/free-solid-svg-icons": "^6.5.2",
     "@ng-bootstrap/ng-bootstrap": "^17.0.1",
     "@popperjs/core": "^2.11.8",
+    "@types/howler": "^2.2.12",
     "bootstrap": "^5.3.2",
+    "howler": "^2.2.4",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.10"
